@@ -220,3 +220,6 @@
 	* Incremented the package version to 1.0.1.
 2022-06-20 Fred Gleason <fredg@paravelsystems.com>
 	* Tweaked the IP address values in the default lwnetrouter(5) file.
+2022-06-20 Fred Gleason <fredg@paravelsystems.com>
+	* Commented the entry points for command operations in
+	'src/lwnetrouterd/protocol_cunc.cpp'.
